# pyp_boy

./: .gitpod.yml  README.md  main.py  pyproject.toml  requirements.txt
pyp_boy/: __init__.py  main.py
pyp_boy/common/tools/: __init__.py  errors.py
pyp_boy/gui/: __init__.py  hacking.py
readme_html/: README.html
source/: conf.py  index.rst
