[tool.poetry]
name = "pyp_boy"
version = "1.0-alpha1"
description = "Python-based program to assist with Fallout hacking. With a GUI!"
authors = ["Taylor-Jayde Blackstone <t.blackstone@inspyre.tech>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.7"
PySimpleGUIQt = "^0.35.0"
inspy-logger = "2.0-a3"
inspyre-toolbox = "^1.0a2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
