[tool.poetry]
name = "pyp_boy"
version = "1.0-alpha2"
description = "Python-based program to assist with Fallout hacking. With a GUI!"
authors = ["Taylor-Jayde Blackstone <t.blackstone@inspyre.tech>"]
license = "WTFPL"

[tool.poetry.urls]
"Bug Tracking" = "https://github.com/tayjaybabee/pyp_boy/issues?q=is%3Aissue+is%3Aopen+sort%3Aupdated-desc"
"Github" = "https://github.com/tayjaybabee/pyp_boy"
"Developer Website" = "https://softworks.inspyre.tech"

[tool.poetry.dependencies]
python = "^3.7"
inspy-logger = "2.0-a3"
inspyre-toolbox = "^1.0a2"
PySimpleGUI = "^4.32.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pyp-boy = "pyp_boy.main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
