[tool.poetry]
name = "pyp_boy"
version = "1.0.1-alpha"
description = "Python-based program to assist with Fallout hacking. With a GUI!"
authors = ["Taylor-Jayde Blackstone <t.blackstone@inspyre.tech>"]
maintainers = ["Taylor-Jayde Blackstone <t.blackstone@inspyre.tech>"]
license = "WTFPL"
readme = "README.md"
homepage = "https://softworks.inspyre.tech/index.php/software-packages-applications/applications/pypboy/about"
keywords = [
    "Fallout", "Hacking", "Terminal",
    "application", "PypBoy", "pyp-boy",
    "pyp_boy", "helper", "fallout 76"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Operating System :: Microsoft :: Windows :: Windows 8",
    "Operating System :: Microsoft :: Windows :: Windows 8.1",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Android",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Games/Entertainment"
]

[tool.poetry.urls]
"Bug Tracking" = "https://github.com/tayjaybabee/pyp_boy/issues?q=is%3Aissue+is%3Aopen+sort%3Aupdated-desc"
"Github" = "https://github.com/tayjaybabee/pyp_boy"
"Developer Website" = "https://softworks.inspyre.tech"
"Homepage" = "https://softworks.inspyre.tech/index.php/software-packages-applications/applications/pypboy/about"


[tool.poetry.dependencies]
python = "^3.7"
inspy-logger = "2.0-a3"
inspyre-toolbox = "^1.0a2"
PySimpleGUI = "^4.32.1"
RandomWords = "^0.3.0"

[tool.poetry.dev-dependencies]
RandomWords = "^0.3.0"
Sphinx = "^3.4.3"


[tool.poetry.scripts]
pyp-boy = "pyp_boy.main:run_gui"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
